sources/traefik/2.traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: becamex-app-api
  namespace: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    # Tên miền truy cập
  - host: traefik-ingress.io
    http:
      paths:
      # - path: /xx
      #   backend:
      #     # dịch vụ phục vụ tương ứng với tên miền và path
      #     serviceName: http-test-svc
      #     servicePort: 80
      - path: /
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: http-test-svc
          servicePort: 80
      - path: /auth
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: auth-auth-api
          servicePort: 80      
      - path: /smartin
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: web-api
          servicePort: 80     
      - path: /machine
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: machine-api
          servicePort: 80     
      - path: /inventory
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: inventory-api
          servicePort: 80     
      - path: /consumer
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: consumer-api
          servicePort: 80     
      - path: /signalr
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: signalr-api
          servicePort: 80     
      - path: /api
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: mobile-api
          servicePort: 80
