sources/traefik/5.traefik-ingress-h2c.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: becamex-app-api
  namespace: traefik-ingress
  annotations:
    ingress.kubernetes.io/protocol: h2c
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: traefik
    traefik.protocol: h2c
spec:
  rules:
    # Tên miền truy cập
  - host: traefik-ingress.io
    http:
      paths:
      - path: /smartin-h2c
        backend:
          # dịch vụ phục vụ tương ứng với tên miền và path
          serviceName: web-api
          servicePort: 3456
